# AudioSense_Module_LiveSpeechAmplifier

./: App.js  audio_engine.js  audio_engine_v10.js  index.html  package.json  style.css  viva_preparation_guide.md
ai_models/: export_tflite.py  generate_samples.py  train_convtasnet.py  train_dtln.py
android/app/src/main/cpp/: AndroidEchoWrapper.cpp  AndroidOboeWrapper.cpp  AudioEngine.cpp  CMakeLists.txt  JSIBindings.cpp
cpp_core/: AudioEngineCore.cpp  EngineCore.cpp
ios/LiveSpeechAmplifier/: IOSAudioUnitWrapper.mm  IOSVoiceWrapper.mm
src/native/: JSIBridge.cpp
web_prototype/: app.js  audio_engine.js  audio_engine_v10.js  index.html
